@@ -28,7 +28,7 @@ build.compiler=modern
 #------------------------------------------------------------
 orion.dir=c:/orion
 FLEX_HOME=c:/flex_sdk_3.5
-gnomex_version=5.2
+gnomex_version=5.2.1
 
 
 metainf.dir=${basedir}/META-INF
